<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/main_color"
    tools:context=".ForgotPasswordScreen">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="256dp"
        android:layout_height="117dp"
        android:layout_marginTop="117dp"
        app:srcCompat="@drawable/for_textlogo_v2" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:layout_marginTop="25dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/forgot_password_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-79dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/kreon_bold"
        android:text="@string/forgot_password_screen"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/forgot_password_screen_email_field"
        android:background="@drawable/edittext_shape"
        android:layout_marginTop="30dp"
        app:boxStrokeWidthFocused="5dp"
        app:boxStrokeWidth="0dp"
        app:shapeAppearance="@style/Rounded"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/text_color_goldenshade"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="330dp"
            android:layout_height="69dp"
            android:id="@+id/forgot_password_screen_input_for_email"
            android:inputType="textEmailAddress"
            android:hint="@string/inputfield_email"
            android:imeOptions="actionDone"
            android:textColorHint="@color/text_color_goldenshade"
            android:textSize="20sp"
            android:fontFamily="@font/kreon_bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/kreon_bold"
        android:text="@string/forgot_password_screen_text"
        android:textAlignment="center"
        android:textColor="@color/text_color_goldenshade"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password_screen_trigger_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:background="@drawable/trigger_button_shape"
        android:fontFamily="@font/kreon_bold"
        android:text="@string/send"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color_greyshade"
        android:textSize="20dp" />

</LinearLayout>